# hapl

./: .gitignore  .pmake-project  CMakeLists.txt  CMakePresets.json
hapl/: CMakeLists.txt
hapl/include/hapl/: CMakeLists.txt  Data.hpp  Math.hpp
hapl/source/: CMakeLists.txt  Main.cpp
